--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,17 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.1.0' apply false
-    id 'com.android.library' version '7.1.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+buildscript {
+    apply from: 'config.gradle'
+    apply from: 'dependencies.gradle'
+
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath globalDependencies.androidGradlePlugin
+        classpath globalDependencies.kotlinGradlePlugin
+        classpath globalDependencies.navigationSafeArgsPlugin
+    }
 }
 
 task clean(type: Delete) {
