--- a/keys/keystore.properties
+++ b/keys/keystore.properties
@@ -1,5 +1,5 @@
 storeFile=keys/olgabakhur.keystore
 storeType=jks
-keyAlias=BaseProject
+keyAlias=keyOlgaBakhur
 keyPassword=Wfk435Fks78D!
-storePassword=jeR37*esUm
+storePassword=Wfk435Fks78D!
