--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,7 +88,7 @@ dependencies {
 
     // Room
     implementation globalDependencies.room
-    kapt globalDependencies.roomCompiler
+    annotationProcessor globalDependencies.roomCompiler
     implementation globalDependencies.roomCoroutines
 
     // AppCompat
@@ -99,6 +99,8 @@ dependencies {
 
     // ConstraintLayout
     implementation appDependencies.constraintLayout
+
+    implementation appDependencies.swipeRefreshLayout
 
     // Glide
     implementation appDependencies.glide
