--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,7 +88,7 @@ dependencies {
 
     // Room
     implementation globalDependencies.room
-    annotationProcessor globalDependencies.roomCompiler
+    kapt globalDependencies.roomCompiler
     implementation globalDependencies.roomCoroutines
 
     // AppCompat
