--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -46,7 +46,7 @@ dependencies {
 
     // Room
     implementation globalDependencies.room
-    annotationProcessor globalDependencies.roomCompiler
+    kapt globalDependencies.roomCompiler
     implementation globalDependencies.roomCoroutines
 
     // Coroutines
