--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: "com.android.library"
 apply plugin: "kotlin-android"
 apply plugin: "kotlin-kapt"
+apply plugin: "kotlinx-serialization"
 
 android {
     compileSdkVersion globalConfig.compileSdkVersion
@@ -56,4 +57,7 @@ dependencies {
     // Dagger
     api globalDependencies.dagger
     kapt globalDependencies.daggerCompiler
+
+    // Preferences DataStore
+    implementation globalDependencies.preferencesDataStore
 }
