rename packages to lower case

--- a/config.gradle
+++ b/config.gradle
@@ -22,7 +22,7 @@ ext {
             keyAlias     : keystoreProperties["keyAlias"],
             keyPassword  : keystoreProperties["keyPassword"],
             storeFile    : file(keystoreProperties["storeFile"]),
-            storePassword: keystoreProperties["storePassword"],
+            storePassword: keystoreProperties["storePassword"]
     ]
 
     dataConfig = [
