--- a/app/build.gradle
+++ b/app/build.gradle
@@ -131,7 +131,7 @@ dependencies {
     implementation globalDependencies.preferencesDataStore
 
     // Tests
-    androidTestImplementation testDependencies.junit
-    androidTestImplementation testDependencies.androidxTestJunit
-    androidTestImplementation testDependencies.espressoCore
+    testImplementation testDependencies.junit
+    testImplementation testDependencies.androidxTestJunit
+    testImplementation testDependencies.espressoCore
 }
