--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ apply plugin: "kotlin-android"
 apply plugin: "kotlin-kapt"
 apply plugin: "kotlinx-serialization"
 apply plugin: "androidx.navigation.safeargs"
+//apply plugin: "com.google.gms.google-services"
+//apply plugin: 'com.google.firebase.crashlytics'
 
 android {
     compileSdkVersion globalConfig.compileSdkVersion
@@ -129,6 +131,11 @@ dependencies {
 
     // Preferences DataStore
     implementation globalDependencies.preferencesDataStore
+
+    // Firebase
+//    implementation platform(appDependencies.firebaseBom)
+//    implementation appDependencies.crashlytics
+//    implementation appDependencies.analytics
 
     // Tests
     testImplementation testDependencies.junit
