--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,162 +1,170 @@
 def libraryVersions = [
         // Plugins
-        androidGradlePlugin             : "7.1.0",
-        navigation                      : "2.5.1",
+        androidGradlePlugin        : "7.1.0",
+        navigation                 : "2.5.1",
 
         // Kotlin
-        kotlin                          : "1.6.21",
-        ktxSerialization                : "1.3.3",
+        kotlin                     : "1.6.21",
+        ktxSerialization           : "1.3.3",
 
         // Room
-        room                            : "2.3.0",
+        room                       : "2.3.0",
 
         // Coroutines
-        coroutinesCore                  : "1.6.1",
-        coroutinesAndroid               : "1.6.3",
+        coroutinesCore             : "1.6.1",
+        coroutinesAndroid          : "1.6.3",
 
         // Retrofit
-        retrofit                        : "2.9.0",
-        gson                            : "2.9.0",
+        retrofit                   : "2.9.0",
+        gson                       : "2.9.0",
 
         // OkHttp
-        okHttp                          : "4.9.3",
+        okHttp                     : "4.9.3",
 
         // Dagger
-        dagger                          : "2.42",
+        dagger                     : "2.42",
 
         // AppCompat
-        appCompat                       : "1.4.2",
+        appCompat                  : "1.4.2",
 
         // Material design
-        materialDesign                  : "1.6.1",
+        materialDesign             : "1.6.1",
 
         // ConstraintLayout
-        constraintLayout                : "2.1.4",
+        constraintLayout           : "2.1.4",
 
         // SwipeRefresh layout
-        swipeRefreshLayout              : "1.1.0",
+        swipeRefreshLayout         : "1.1.0",
 
         // Glide
-        glide                           : "4.13.2",
-        glideCompiler                   : "4.11.0",
+        glide                      : "4.13.2",
+        glideCompiler              : "4.11.0",
 
         // Lifecycle Coroutines
-        lifecycleCoroutinesKtx          : "2.5.1",
+        lifecycleCoroutinesKtx     : "2.5.1",
 
         // Lifecycle LiveData
-        lifecycleLiveDataKtx            : "2.5.0",
+        lifecycleLiveDataKtx       : "2.5.0",
 
         // Activity
-        ktxActivity                     : "1.5.0",
+        ktxActivity                : "1.5.0",
 
         // Fragment
-        ktxFragment                     : "1.5.0",
+        ktxFragment                : "1.5.0",
 
         // ViewBinding delegate
-        viewBindingPropertyDelegate     : "1.5.6",
+        viewBindingPropertyDelegate: "1.5.6",
 
         // Preferences DataStore
-        preferencesDataStore            : "1.0.0",
+        preferencesDataStore       : "1.0.0",
+
+        // Firebase
+        firebaseBom                : "30.3.2",
 
         // Tests
-        junit                           : "4.13.2",
-        androidxTestJunit               : "1.1.3",
-        espresso                        : "3.4.0"
+        junit                      : "4.13.2",
+        androidxTestJunit          : "1.1.3",
+        espresso                   : "3.4.0"
 ]
 
 ext {
     globalDependencies = [
             // Modules
-            layerApp                : project(":app"),
-            layerData               : project(":data"),
-            layerDomain             : project(":domain"),
+            layerApp                 : project(":app"),
+            layerData                : project(":data"),
+            layerDomain              : project(":domain"),
 
             // Plugins
-            androidGradlePlugin        : "com.android.tools.build:gradle:${libraryVersions.androidGradlePlugin}",
-            kotlinGradlePlugin         : "org.jetbrains.kotlin:kotlin-gradle-plugin:${libraryVersions.kotlin}",
-            navigationSafeArgsPlugin   : "androidx.navigation:navigation-safe-args-gradle-plugin:${libraryVersions.navigation}",
-            kotlinSerializationPlugin  : "org.jetbrains.kotlin:kotlin-serialization:${libraryVersions.kotlin}",
+            androidGradlePlugin      : "com.android.tools.build:gradle:${libraryVersions.androidGradlePlugin}",
+            kotlinGradlePlugin       : "org.jetbrains.kotlin:kotlin-gradle-plugin:${libraryVersions.kotlin}",
+            navigationSafeArgsPlugin : "androidx.navigation:navigation-safe-args-gradle-plugin:${libraryVersions.navigation}",
+            kotlinSerializationPlugin: "org.jetbrains.kotlin:kotlin-serialization:${libraryVersions.kotlin}",
 
             // Kotlin
-            coreKtx                    : "androidx.core:core-ktx:${libraryVersions.kotlin}",
-            kotlinStdLib               : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${libraryVersions.kotlin}",
-            kotlinSerialization        : "org.jetbrains.kotlinx:kotlinx-serialization-json:${libraryVersions.ktxSerialization}",
+            coreKtx                  : "androidx.core:core-ktx:${libraryVersions.kotlin}",
+            kotlinStdLib             : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${libraryVersions.kotlin}",
+            kotlinSerialization      : "org.jetbrains.kotlinx:kotlinx-serialization-json:${libraryVersions.ktxSerialization}",
 
             // Coroutines
-            coroutinesCore             : "org.jetbrains.kotlinx:kotlinx-coroutines-core:${libraryVersions.coroutinesCore}",
-            coroutinesAndroid          : "org.jetbrains.kotlinx:kotlinx-coroutines-android:${libraryVersions.coroutinesAndroid}",
+            coroutinesCore           : "org.jetbrains.kotlinx:kotlinx-coroutines-core:${libraryVersions.coroutinesCore}",
+            coroutinesAndroid        : "org.jetbrains.kotlinx:kotlinx-coroutines-android:${libraryVersions.coroutinesAndroid}",
 
             // Lifecycle LiveData
-            lifecycleLiveDataKtx       : "androidx.lifecycle:lifecycle-livedata-ktx:${libraryVersions.lifecycleLiveDataKtx}",
+            lifecycleLiveDataKtx     : "androidx.lifecycle:lifecycle-livedata-ktx:${libraryVersions.lifecycleLiveDataKtx}",
 
             // Dagger
-            dagger                     : "com.google.dagger:dagger:${libraryVersions.dagger}",
-            daggerCompiler             : "com.google.dagger:dagger-compiler:${libraryVersions.dagger}",
+            dagger                   : "com.google.dagger:dagger:${libraryVersions.dagger}",
+            daggerCompiler           : "com.google.dagger:dagger-compiler:${libraryVersions.dagger}",
 
             // Room
-            room                       : "androidx.room:room-runtime:${libraryVersions.room}",
-            roomCompiler               : "androidx.room:room-compiler:${libraryVersions.room}",
-            roomCoroutines             : "androidx.room:room-ktx:${libraryVersions.room}",
+            room                     : "androidx.room:room-runtime:${libraryVersions.room}",
+            roomCompiler             : "androidx.room:room-compiler:${libraryVersions.room}",
+            roomCoroutines           : "androidx.room:room-ktx:${libraryVersions.room}",
 
             // Preferences DataStore
-            preferencesDataStore       : "androidx.datastore:datastore-preferences:${libraryVersions.preferencesDataStore}"
+            preferencesDataStore     : "androidx.datastore:datastore-preferences:${libraryVersions.preferencesDataStore}"
     ]
 
     appDependencies = [
             // AppCompat
-            appCompat                             : "androidx.appcompat:appcompat:${libraryVersions.appCompat}",
+            appCompat                       : "androidx.appcompat:appcompat:${libraryVersions.appCompat}",
 
             // Material design
-            materialDesign                        : "com.google.android.material:material:${libraryVersions.materialDesign}",
+            materialDesign                  : "com.google.android.material:material:${libraryVersions.materialDesign}",
 
             // ConstraintLayout
-            constraintLayout                      : "androidx.constraintlayout:constraintlayout:${libraryVersions.constraintLayout}",
+            constraintLayout                : "androidx.constraintlayout:constraintlayout:${libraryVersions.constraintLayout}",
 
             // SwipeRefresh layout
-            swipeRefreshLayout                    : "androidx.swiperefreshlayout:swiperefreshlayout:${libraryVersions.swipeRefreshLayout}",
+            swipeRefreshLayout              : "androidx.swiperefreshlayout:swiperefreshlayout:${libraryVersions.swipeRefreshLayout}",
 
             // Glide
-            glide                                 : "com.github.bumptech.glide:glide:${libraryVersions.glide}",
-            glideCompiler                         : "com.github.bumptech.glide:compiler:${libraryVersions.glideCompiler}",
+            glide                           : "com.github.bumptech.glide:glide:${libraryVersions.glide}",
+            glideCompiler                   : "com.github.bumptech.glide:compiler:${libraryVersions.glideCompiler}",
 
             // Navigation
-            navigationFragmentKtx                 : "androidx.navigation:navigation-fragment-ktx:${libraryVersions.navigation}",
-            navigationUiKtx                       : "androidx.navigation:navigation-ui-ktx:${libraryVersions.navigation}",
+            navigationFragmentKtx           : "androidx.navigation:navigation-fragment-ktx:${libraryVersions.navigation}",
+            navigationUiKtx                 : "androidx.navigation:navigation-ui-ktx:${libraryVersions.navigation}",
 
             // Lifecycle Coroutines
-            llifecycleCoroutinesKtxViewModel      : "androidx.lifecycle:lifecycle-viewmodel-ktx:${libraryVersions.lifecycleCoroutinesKtx}",
-            llifecycleCoroutinesKtxRuntime        : "androidx.lifecycle:lifecycle-runtime-ktx:${libraryVersions.lifecycleCoroutinesKtx}",
+            llifecycleCoroutinesKtxViewModel: "androidx.lifecycle:lifecycle-viewmodel-ktx:${libraryVersions.lifecycleCoroutinesKtx}",
+            llifecycleCoroutinesKtxRuntime  : "androidx.lifecycle:lifecycle-runtime-ktx:${libraryVersions.lifecycleCoroutinesKtx}",
 
             // Activity
-            activityKtx                           : "androidx.activity:activity-ktx:${libraryVersions.ktxActivity}",
+            activityKtx                     : "androidx.activity:activity-ktx:${libraryVersions.ktxActivity}",
 
             // Fragment
-            fragmentKtx                           : "androidx.fragment:fragment-ktx:${libraryVersions.ktxFragment}",
+            fragmentKtx                     : "androidx.fragment:fragment-ktx:${libraryVersions.ktxFragment}",
 
             // ViewBinding delegate
-            viewBindingPropertyDelegate           : "com.github.kirich1409:viewbindingpropertydelegate-noreflection:${libraryVersions.viewBindingPropertyDelegate}"
+            viewBindingPropertyDelegate     : "com.github.kirich1409:viewbindingpropertydelegate-noreflection:${libraryVersions.viewBindingPropertyDelegate}",
+
+            // Firebase
+//            firebaseBom                     : "com.google.firebase:firebase-bom:${libraryVersions.firebaseBom}",
+//            crashlytics                     : "com.google.firebase:firebase-crashlytics-ktx",
+//            analytics                       : "com.google.firebase:firebase-analytics-ktx"
     ]
 
     dataDependencies = [
             // GSON
-            gson                       : "com.google.code.gson:gson:${libraryVersions.gson}",
+            gson                    : "com.google.code.gson:gson:${libraryVersions.gson}",
 
             // Retrofit
-            retrofit                   : "com.squareup.retrofit2:retrofit:${libraryVersions.retrofit}",
-            retrofitConverterGson      : "com.squareup.retrofit2:converter-gson:${libraryVersions.retrofit}",
+            retrofit                : "com.squareup.retrofit2:retrofit:${libraryVersions.retrofit}",
+            retrofitConverterGson   : "com.squareup.retrofit2:converter-gson:${libraryVersions.retrofit}",
 
             // OkHttp
-            okHttp                     : "com.squareup.okhttp3:okhttp:${libraryVersions.okHttp}",
-            okHttpLoggingInterceptor   : "com.squareup.okhttp3:logging-interceptor:${libraryVersions.okHttp}",
-            okHttpSse                  : "com.squareup.okhttp3:okhttp-sse:${libraryVersions.okHttp}"
+            okHttp                  : "com.squareup.okhttp3:okhttp:${libraryVersions.okHttp}",
+            okHttpLoggingInterceptor: "com.squareup.okhttp3:logging-interceptor:${libraryVersions.okHttp}",
+            okHttpSse               : "com.squareup.okhttp3:okhttp-sse:${libraryVersions.okHttp}"
     ]
 
     domainDependencies = [
     ]
 
     testDependencies = [
-            junit                : "junit:junit:${libraryVersions.junit}",
-            androidxTestJunit    : "androidx.test.ext:junit:${libraryVersions.androidxTestJunit},",
-            espressoCore         : "androidx.test.espresso:espresso-core:${libraryVersions.espresso}"
+            junit            : "junit:junit:${libraryVersions.junit}",
+            androidxTestJunit: "androidx.test.ext:junit:${libraryVersions.androidxTestJunit},",
+            espressoCore     : "androidx.test.espresso:espresso-core:${libraryVersions.espresso}"
     ]
 }
