--- a/keys/keystore.properties
+++ b/keys/keystore.properties
@@ -1,5 +1,4 @@
-storeFile=keys/olgabakhur.keystore
-storeType=jks
-keyAlias=keyOlgaBakhur
-keyPassword=Wfk435Fks78D!
-storePassword=Wfk435Fks78D!
+storeFile=keys/base_project_upload-keystore.jks
+keyAlias=keyBaseProject
+keyPassword=hG3mD5!kdS
+storePassword=hG3mD5!kdS
