Fix for tests dependencies

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -129,6 +129,5 @@ dependencies {
 
     // Tests
     testImplementation testDependencies.junit
-    testImplementation testDependencies.androidxTestJunit
-    testImplementation testDependencies.espressoCore
+    androidTestImplementation testDependencies.androidxTestJunit
 }
