--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -57,9 +57,8 @@ def libraryVersions = [
         preferencesDataStore       : '1.0.0',
 
         // Tests
-        junit                      : '4.13.2',
-        androidxTestJunit          : '1.1.3',
-        espresso                   : '3.5.0'
+        junit                      : '4.12',
+        androidxTestJunit          : '1.1.3'
 ]
 
 ext {
@@ -150,8 +149,7 @@ ext {
     ]
 
     testDependencies = [
-            junit            : "junit:junit:${libraryVersions.junit}",
-            androidxTestJunit: "androidx.test.ext:junit:${libraryVersions.androidxTestJunit},",
-            espressoCore     : "androidx.test.espresso:espresso-core:${libraryVersions.espresso}"
+            junit: "junit:junit:${libraryVersions.junit}",
+            androidxTestJunit: "androidx.test.ext:junit-ktx:${libraryVersions.androidxTestJunit}"
     ]
 }
