--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -62,4 +62,8 @@ dependencies {
 
     // Preferences DataStore
     implementation globalDependencies.preferencesDataStore
+
+    // Tests
+    testImplementation testDependencies.junit
+    androidTestImplementation testDependencies.androidxTestJunit
 }
